chore: Make async tracker importer use scheduler