@@ -27,35 +27,25 @@
  */
 package org.hisp.dhis.tracker.imports;
 
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.COMMIT_OPS;
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.PREHEAT_OPS;
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.PREPROCESS_OPS;
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.PROGRAMRULE_OPS;
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.TOTAL_OPS;
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.VALIDATE_PROGRAMRULE_OPS;
-import static org.hisp.dhis.tracker.imports.report.TimingsStats.VALIDATION_OPS;
-
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.hisp.dhis.system.notification.NotificationLevel;
-import org.hisp.dhis.system.notification.Notifier;
+import org.hisp.dhis.scheduling.JobProgress;
 import org.hisp.dhis.tracker.TrackerType;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundle;
 import org.hisp.dhis.tracker.imports.bundle.TrackerBundleService;
+import org.hisp.dhis.tracker.imports.domain.TrackerObjects;
 import org.hisp.dhis.tracker.imports.job.TrackerSideEffectDataBundle;
 import org.hisp.dhis.tracker.imports.preprocess.TrackerPreprocessService;
 import org.hisp.dhis.tracker.imports.report.ImportReport;
 import org.hisp.dhis.tracker.imports.report.PersistenceReport;
 import org.hisp.dhis.tracker.imports.report.Status;
-import org.hisp.dhis.tracker.imports.report.TimingsStats;
 import org.hisp.dhis.tracker.imports.report.TrackerTypeReport;
 import org.hisp.dhis.tracker.imports.report.ValidationReport;
 import org.hisp.dhis.tracker.imports.validation.ValidationResult;
@@ -78,142 +68,75 @@ public class DefaultTrackerImportService implements TrackerImportService {
 
   @Nonnull private final TrackerUserService trackerUserService;
 
-  @Nonnull private final Notifier notifier;
-
   @Override
-  public ImportReport importTracker(TrackerImportParams params) {
+  public ImportReport importTracker(
+      TrackerImportParams params, TrackerObjects trackerObjects, JobProgress jobProgress) {
     User user = trackerUserService.getUser(params.getUserId());
-    params.setUser(user);
 
-    TimingsStats opsTimer = new TimingsStats();
+    jobProgress.startingStage("Running PreHeat");
+    TrackerBundle trackerBundle =
+        jobProgress.runStage(() -> trackerBundleService.create(params, trackerObjects, user));
 
-    startImport(params);
+    Map<TrackerType, Integer> bundleSize = calculatePayloadSize(trackerBundle);
 
-    try {
-      TrackerBundle trackerBundle = preHeat(params, opsTimer);
+    jobProgress.startingStage("Running PreProcess");
+    jobProgress.runStage(() -> preProcessBundle(trackerBundle));
 
-      Map<TrackerType, Integer> bundleSize = calculatePayloadSize(trackerBundle);
+    jobProgress.startingStage("Running Validation");
+    ValidationResult validationResult = jobProgress.runStage(() -> validateBundle(trackerBundle));
 
-      preProcess(opsTimer, trackerBundle);
-
-      ValidationReport validationReport = validate(params, opsTimer, trackerBundle);
-
-      if (exitOnError(validationReport, params)) {
-        return buildReportAndNotify(params, validationReport, opsTimer, bundleSize);
-      }
-
-      PersistenceReport persistenceReport = commit(params, opsTimer, trackerBundle);
-
-      postCommit(trackerBundle);
-
-      ImportReport importReport =
-          ImportReport.withImportCompleted(
-              Status.OK, persistenceReport, validationReport, opsTimer.stopTimer(), bundleSize);
-
-      endImport(params, importReport);
-
-      return importReport;
-    } catch (Exception e) {
-      log.error("Exception thrown during import.", e);
-
-      ImportReport report =
-          ImportReport.withError(
-              "Exception:" + e.getMessage(), ValidationReport.emptyReport(), opsTimer.stopTimer());
-
-      endImportWithError(params, report, e);
-
-      return report;
-    }
-  }
-
-  private TrackerBundle preHeat(TrackerImportParams params, TimingsStats opsTimer) {
-    TrackerBundle trackerBundle = opsTimer.exec(PREHEAT_OPS, () -> preheatBundle(params));
-
-    notifyOps(params, PREHEAT_OPS, opsTimer);
-
-    return trackerBundle;
-  }
-
-  private void preProcess(TimingsStats opsTimer, TrackerBundle trackerBundle) {
-    opsTimer.execVoid(PREPROCESS_OPS, () -> preProcessBundle(trackerBundle));
-  }
-
-  private ValidationReport validate(
-      TrackerImportParams params, TimingsStats opsTimer, TrackerBundle trackerBundle) {
-    ValidationResult validationResult =
-        opsTimer.exec(VALIDATION_OPS, () -> validateBundle(params, trackerBundle, opsTimer));
+    ValidationReport validationReport = ValidationReport.fromResult(validationResult);
 
     if (!trackerBundle.isSkipRuleEngine() && !params.getImportStrategy().isDelete()) {
-      ValidationResult ruleEnginevalidationResult = execRuleEngine(params, opsTimer, trackerBundle);
+      jobProgress.startingStage("Running Rule Engine");
+      jobProgress.runStage(() -> trackerBundleService.runRuleEngine(trackerBundle));
 
-      return ValidationReport.merge(validationResult, ruleEnginevalidationResult);
+      jobProgress.startingStage("Running Rule Engine Validation");
+      ValidationResult result =
+          jobProgress.runStage(() -> validationService.validateRuleEngine(trackerBundle));
+      trackerBundle.setTrackedEntities(result.getTrackedEntities());
+      trackerBundle.setEnrollments(result.getEnrollments());
+      trackerBundle.setEvents(result.getEvents());
+      trackerBundle.setRelationships(result.getRelationships());
+
+      validationReport = ValidationReport.merge(validationResult, result);
     }
 
-    return ValidationReport.fromResult(validationResult);
+    if (exitOnError(validationReport, params)) {
+      return ImportReport.withValidationErrors(
+          validationReport, bundleSize.values().stream().mapToInt(Integer::intValue).sum());
+    }
+
+    jobProgress.startingStage("Commit Transaction");
+    PersistenceReport persistenceReport = jobProgress.runStage(() -> commit(params, trackerBundle));
+
+    jobProgress.startingStage("PostCommit");
+    jobProgress.runStage(() -> postCommit(trackerBundle));
+
+    return ImportReport.withImportCompleted(
+        Status.OK, persistenceReport, validationReport, bundleSize);
   }
 
-  private PersistenceReport commit(
-      TrackerImportParams params, TimingsStats opsTimer, TrackerBundle trackerBundle) {
-    PersistenceReport persistenceReport;
+  private PersistenceReport commit(TrackerImportParams params, TrackerBundle trackerBundle) {
     if (TrackerImportStrategy.DELETE == params.getImportStrategy()) {
-      persistenceReport = opsTimer.exec(COMMIT_OPS, () -> deleteBundle(trackerBundle));
+      return deleteBundle(trackerBundle);
     } else {
-      persistenceReport = opsTimer.exec(COMMIT_OPS, () -> commitBundle(trackerBundle));
+      return commitBundle(trackerBundle);
     }
-
-    notifyOps(params, COMMIT_OPS, opsTimer);
-    return persistenceReport;
   }
 
   private void postCommit(TrackerBundle trackerBundle) {
     trackerBundleService.postCommit(trackerBundle);
   }
 
-  protected ValidationResult validateBundle(
-      TrackerImportParams params, TrackerBundle bundle, TimingsStats opsTimer) {
+  protected ValidationResult validateBundle(TrackerBundle bundle) {
     ValidationResult result = validationService.validate(bundle);
     bundle.setTrackedEntities(result.getTrackedEntities());
     bundle.setEnrollments(result.getEnrollments());
     bundle.setEvents(result.getEvents());
     bundle.setRelationships(result.getRelationships());
 
-    notifyOps(params, VALIDATION_OPS, opsTimer);
-
     return result;
-  }
-
-  private ValidationResult execRuleEngine(
-      TrackerImportParams params, TimingsStats opsTimer, TrackerBundle bundle) {
-    opsTimer.execVoid(PROGRAMRULE_OPS, () -> trackerBundleService.runRuleEngine(bundle));
-
-    notifyOps(params, PROGRAMRULE_OPS, opsTimer);
-
-    ValidationResult result =
-        opsTimer.exec(VALIDATE_PROGRAMRULE_OPS, () -> validationService.validateRuleEngine(bundle));
-    bundle.setTrackedEntities(result.getTrackedEntities());
-    bundle.setEnrollments(result.getEnrollments());
-    bundle.setEvents(result.getEvents());
-    bundle.setRelationships(result.getRelationships());
-
-    notifyOps(params, VALIDATE_PROGRAMRULE_OPS, opsTimer);
-
-    return result;
-  }
-
-  private ImportReport buildReportAndNotify(
-      TrackerImportParams params,
-      ValidationReport validationReport,
-      TimingsStats opsTimer,
-      Map<TrackerType, Integer> bundleSize) {
-    ImportReport importReport =
-        ImportReport.withValidationErrors(
-            validationReport,
-            opsTimer.stopTimer(),
-            bundleSize.values().stream().mapToInt(Integer::intValue).sum());
-
-    endImport(params, importReport);
-
-    return importReport;
   }
 
   private boolean exitOnError(ValidationReport validationReport, TrackerImportParams params) {
@@ -228,10 +151,6 @@ public class DefaultTrackerImportService implements TrackerImportService {
         TrackerType.RELATIONSHIP, bundle.getRelationships().size());
   }
 
-  protected TrackerBundle preheatBundle(TrackerImportParams params) {
-    return trackerBundleService.create(params);
-  }
-
   protected void preProcessBundle(TrackerBundle bundle) {
     trackerPreprocessService.preprocess(bundle);
   }
@@ -244,7 +163,7 @@ public class DefaultTrackerImportService implements TrackerImportService {
           Stream.of(TrackerType.ENROLLMENT, TrackerType.EVENT)
               .map(trackerType -> safelyGetSideEffectsDataBundles(persistenceReport, trackerType))
               .flatMap(Collection::stream)
-              .collect(Collectors.toList());
+              .toList();
 
       trackerBundleService.handleTrackerSideEffects(sideEffectDataBundles);
     }
@@ -263,48 +182,6 @@ public class DefaultTrackerImportService implements TrackerImportService {
 
   protected PersistenceReport deleteBundle(TrackerBundle trackerBundle) {
     return trackerBundleService.delete(trackerBundle);
-  }
-
-  private void startImport(TrackerImportParams params) {
-    if (null != params.getJobConfiguration()) {
-      notifier.notify(params.getJobConfiguration(), params.userStartInfo() + " Import:Start");
-    }
-  }
-
-  private void notifyOps(TrackerImportParams params, String validationOps, TimingsStats opsTimer) {
-    if (null != params.getJobConfiguration()) {
-      notifier.update(
-          params.getJobConfiguration(),
-          NotificationLevel.DEBUG,
-          params
-              + validationOps
-              + " completed in "
-              + opsTimer.get(validationOps)
-              + " Import:"
-              + validationOps);
-    }
-  }
-
-  private void endImport(TrackerImportParams params, ImportReport importReport) {
-    if (null != params.getJobConfiguration()) {
-      notifier.update(
-          params.getJobConfiguration(),
-          params + " finished in " + importReport.getTimingsStats().get(TOTAL_OPS) + " Import:Done",
-          true);
-
-      notifier.addJobSummary(params.getJobConfiguration(), importReport, ImportReport.class);
-    }
-  }
-
-  private void endImportWithError(
-      TrackerImportParams params, ImportReport importReport, Exception e) {
-    notifier.update(
-        params.getJobConfiguration(),
-        NotificationLevel.ERROR,
-        params + " failed with exception: " + e.getMessage() + " Import:Error",
-        true);
-
-    notifier.addJobSummary(params.getJobConfiguration(), importReport, ImportReport.class);
   }
 
   /**
@@ -328,11 +205,10 @@ public class DefaultTrackerImportService implements TrackerImportService {
     if (originalValidationReport != null) {
       validationReport.addErrors(originalValidationReport.getErrors());
     }
-    if (originalValidationReport != null && TrackerBundleReportMode.WARNINGS == reportMode) {
+    if (originalValidationReport != null
+        && (TrackerBundleReportMode.WARNINGS == reportMode
+            || TrackerBundleReportMode.FULL == reportMode)) {
       validationReport.addWarnings(originalValidationReport.getWarnings());
-    } else if (originalValidationReport != null && TrackerBundleReportMode.FULL == reportMode) {
-      validationReport.addWarnings(originalValidationReport.getWarnings());
-      importReportBuilder.timingsStats(originalImportReport.getTimingsStats());
     }
 
     importReportBuilder.validationReport(validationReport);
